# palautusrepositorio

./: .gitignore  README.md
dokumentaatio/: tehtavat.md  tehtavat1.md  tehtavat2.md  tehtavat3.md  tehtavat4.md  tehtavat5.md  tehtavat6.md  tehtavat7.md
viikko1/nhl-statistics/: .coveragerc
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko2/git-branch-harjoitus/: Tehtava13_muutos.txt  index.py  logger.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko4/: muutokset.md
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: ARCHITECTURE.md  COVERAGE_REPORT.md  HOW_TO_PLAY.md  README.md  UI_UPDATE.md  pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: kivi_paperi_sakset.py  kps_parempi_tekoaly.py
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  kivi_paperi_sakset_tehdas.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  web_app.py
viikko7/kivi-paperi-sakset/src/static/: style.css
viikko7/kivi-paperi-sakset/src/templates/: index.html
viikko7/kivi-paperi-sakset/src/tests/: test_tehdas.py  test_tekoaly.py  test_tekoaly_parannettu.py  test_tuomari.py  test_web_app.py
(+7 files in other folders)
